I added the services and staff endpoints and updated the api docs to show them
